@@ -465,9 +465,8 @@ function planet_combat ($db)
         echo "<br><br><center><font color='GREEN'><strong>$l_cmb_planetdefeated</strong></font></center><br><br>";
 
         // Patch to stop players dumping credits for other players.
-        include_once './includes/calc_avg_tech.php';
-        $self_tech = calc_avg_tech ($playerinfo);
-        $target_tech = round (calc_avg_tech ($ownerinfo));
+        $self_tech = CalcLevels::avgTech ($playerinfo);
+        $target_tech = round (CalcLevels::avgTech ($ownerinfo));
 
         $roll = mt_rand (0, (integer) $target_tech);
         if ($roll > $self_tech)
