@@ -18,7 +18,6 @@
 // File: report.php
 
 include './global_includes.php';
-include_once './includes/calc_avg_tech.php';
 
 if (check_login ($db, $lang, $langvars)) // Checks player login, sets playerinfo
 {
@@ -39,7 +38,7 @@ $shiptypes[2] = "mediumship.png";
 $shiptypes[3] = "largeship.png";
 $shiptypes[4] = "hugeship.png";
 
-$shipavg = calc_avg_tech ($playerinfo, "ship");
+$shipavg = CalcLevels::avgTech ($playerinfo, "ship");
 
 if ($shipavg < 8)
 {
